syntax = "proto3";

option go_package = "pkg/grpc";

package helloworld;

// The greeting service definition.
service Greeter {
  // Unary
  rpc UnaryHello (HelloRequest) returns (HelloReply) {}
  // ServerStream
	rpc HelloServerStream (HelloRequest) returns (stream HelloReply);
  // ClientStream
  rpc HelloClientStream (stream HelloRequest) returns (HelloReply);
	// BiStreams
	rpc HelloBiStreams (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
